@@ -1,0 +1,17 @@
+# (C) Copyright IBM Corp 2010
+# All rights reserved.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
+# See the COPYING file included with the SFCB distribution for
+# full licensing terms.
+
+MAINTAINERCLEANFILES = Makefile.in
+
+if UDSTEST
+  TESTS = check_pywbem.py ecn_interop.py
+else
+  TESTS = check_pywbem.py
+endif
+
