@@ -1,0 +1,9 @@
+#!/usr/bin/python
+
+try:
+    import pywbem
+except ImportError:
+    exit(1)
+
+exit(0)
+
