@@ -3,6 +3,8 @@ Changes in 1.3.8
 
 New features:
 
+- 2963601 pywbem tests
+
 Bugs fixed:
 - 2952616 internalProvider is not Threadsafe
 - 2952912 resultSockets variable is not used threadsafe
